# theming

./: CMakeLists.txt  LICENSE  Makefile  README.md
content/: config.json
include/: color.h  config.h  config.h.in  project_vars.h.in  util.h  vector.h
src/: color.c  config.c  main.c  util.c
